<resources>
    <string name="BLE_Audio_Control">BLE Audio Control</string>
    <string name="Firmware_upgrade">Firmware upgrade</string>
    <string name="Idle">Idle</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="access_point_mode_found">SensorTag WiFi in Access Point mode Found !</string>
    <string name="access_point_mode_found_message">is in Access Point mode, would you like to provision this device as a station in another wLAN ?</string>
    <string name="action_settings">Settings</string>
    <string name="adp_ch_mask_high_default">00FF00FF00FF00FF00</string>
    <string name="adp_ch_mask_high_label">CH 64 - 131</string>
    <string name="adp_ch_mask_low_default">00FF00FF00FF00FF</string>
    <string name="adp_ch_mask_low_label">CH 0 - 63</string>
    <string name="adp_current_network_mask_label">Current network channel mask:</string>
    <string name="adp_current_pan_id_label">Current PAN ID:</string>
    <string name="adp_current_pan_id_text">0xXXXX</string>
    <string name="adp_provisioning_state_text">UNPROVISIONED</string>
    <string name="adp_set_network_channel_mask_button_text">Set network channel mask</string>
    <string name="adp_set_pan_id_button_text">Set PAN ID</string>
    <string name="adp_start_provisioning_button_text">Start provisioning (Connect)</string>
    <string name="adp_title">Current provisioning state:</string>
    <string name="advanced">Advanced</string>
    <string name="afnisstwo_off_chip_header">OFF-CHIP OAD IMAGES</string>
    <string name="afnisstwo_on_chip_header">ON-CHIP OAD IMAGES</string>
    <string name="ambient_temperature">Ambient Temperature</string>
    <string name="balanced">Balanced</string>
    <string name="block">Block :</string>
    <string name="bs">----B/s</string>
    <string name="bytes">Bytes :</string>
    <string name="characteristic_title">Characteristic Title</string>
    <string name="con_interval">Con. Interval :</string>
    <string name="connection_control_service">Connection Control Service</string>
    <string name="current_android_connection_priority">Current Android connection priority :</string>
    <string name="current_connection_interval">Current connection interval :</string>
    <string name="current_fw">Current Firmware :</string>
    <string name="current_slave_latency">Current Slave Latency :</string>
    <string name="current_supervision_timeout">Current Supervision Timeout :</string>
    <string name="fff_description_label">This 15.4 device is SM enabled. Please select an authentication mode below</string>
    <string name="fff_sm_title">TI 15.4 Security Manager</string>
    <string name="fff_status_text">Status: N/A</string>
    <string name="fffsm_spinner_prompt">Auth mode selection</string>
    <string name="firmware_rev">Firmware Rev:</string>
    <string name="five_out_of_five">-----/-----</string>
    <string name="four_out_of_four">----/----</string>
    <string name="fp_prov_title">TI DMM Provisioning Interface</string>
    <string name="hardware_rev">Hardware Rev:</string>
    <string name="high">High</string>
    <string name="low_pwr">Low Pwr</string>
    <string name="manufacturer_name">Manufacturer Name:</string>
    <string name="minus_sign">-</string>
    <string name="model_nr">Model Nr:</string>
    <string name="ms">-- ms</string>
    <string name="na">N/A</string>
    <string name="packets_per_timer_notif">Packets per timer/notif</string>
    <string name="plus_sign">+</string>
    <string name="serial_nr">Serial Nr:</string>
    <string name="set_android_connection_priority">Set Android connection priority :</string>
    <string name="set_connection_interval">Set Connection interval</string>
    <string name="sevenpointfive">7.5</string>
    <string name="software_rev">Software Rev:</string>
    <string name="speed">Speed :</string>
    <string name="system_id">System ID:</string>
    <string name="thousand">1000</string>
    <string name="timer_delay">Timer Delay :</string>
    <string name="unknown_date">X.XX (Unknown date)</string>
    <string name="use_notifications">Use notifications :</string>
    <string name="version">Version :</string>
    <string name="xx">xx</string>
    <string name="xx_ms">xx ms</string>
    <string name="zero">0</string>
    <string name="zero_ms">0 ms</string>
    <string name="zero_percent">0.0%</string>
</resources>