<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/cctr_row" android:background="?android:attr/selectableItemBackground" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/cctr_icon" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@mipmap/sensortag2_connection_control" android:layout_weight="0.1"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="390dp" android:layout_weight="1">
        <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="#666" android:id="@+id/cctr_characteristic_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/connection_control_service"/>
        <TextView android:textSize="13dp" android:textColor="#666" android:id="@+id/cctr_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/current_connection_interval"/>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#666" android:id="@+id/cctr_current_connection_interval" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_ms"/>
        <TextView android:textSize="13dp" android:textColor="#666" android:id="@+id/textView33" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/current_slave_latency"/>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#666" android:id="@+id/cctr_current_slave_latency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero"/>
        <TextView android:textSize="13dp" android:id="@+id/textView35" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/current_supervision_timeout"/>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#666" android:id="@+id/cctr_current_supervision_timeout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_ms"/>
        <TextView android:textSize="13dp" android:textColor="#666" android:id="@+id/textView37" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/current_android_connection_priority"/>
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#666" android:id="@+id/cctr_current_android_connection_priority" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/na"/>
        <TextView android:textColor="#666" android:id="@+id/textView30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_connection_interval"/>
        <TextView android:textColor="#666" android:id="@+id/cctr_uuid_field" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="0dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#666" android:id="@+id/textView31" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/sevenpointfive" android:layout_weight="1" android:textAlignment="textEnd"/>
            <SeekBar android:id="@+id/cctr_set_connection_interval_seekbar" android:paddingLeft="20dp" android:paddingTop="20dp" android:paddingRight="20dp" android:paddingBottom="20dp" android:layout_width="0dp" android:layout_height="wrap_content" android:max="794" android:layout_weight="7"/>
            <TextView android:textColor="#666" android:id="@+id/textView32" android:paddingTop="20dp" android:paddingBottom="20dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/thousand" android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:textColor="#666" android:id="@+id/textView34" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_android_connection_priority"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ToggleButton android:id="@+id/cctr_high_priority" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="High" android:textOff="High" android:text="@string/high" style="@style/Widget.Holo.Light.Button.Toggle"/>
            <ToggleButton android:id="@+id/cctr_balanced_priority" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="Balanced" android:textOff="Balanced" android:text="@string/balanced" style="@style/Widget.Holo.Light.Button.Toggle"/>
            <ToggleButton android:id="@+id/cctr_low_pwr_priority" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="Low Pwr" android:textOff="Low Pwr" android:text="@string/low_pwr" style="@style/Widget.Holo.Light.Button.Toggle"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/cctr_disclosure_indicator" android:visibility="invisible" android:layout_width="25dp" android:layout_height="wrap_content" android:src="@mipmap/cell_disclose_indicator" android:layout_weight="0.1"/>
</TableRow>
