<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/btsig_devinfo_tr_row" android:background="?android:attr/selectableItemBackground" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/btsig_devinfo_tr_icon" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/sensortag2_deviceinfo" android:layout_weight="0.1"/>
    <LinearLayout android:orientation="vertical" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <TextView android:textSize="18dp" android:textStyle="bold" android:textColor="#666" android:id="@+id/btsig_tr_devinfo_characteristic_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/characteristic_title"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_systemid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/system_id"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_modelnr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/model_nr"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_serialnr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/serial_nr"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_firmwarerev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/firmware_rev"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_hardwarerev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hardware_rev"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_softwarerev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/software_rev"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="10dp" android:textColor="#666" android:id="@+id/btsig_devinfo_tr_manifname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manufacturer_name"/>
    </LinearLayout>
</TableRow>
